--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
       <p>Thank You for visiting my website.</p>
       <div class="social-links">
         <a href="https://www.facebook.com/vaishnav.c.10" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/tintuhere/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/_vai_sh_nav__2005/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Vaishnav c</span></strong>. All Rights Reserved
