--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p>I'm <span class="typed" data-typed-items="Web Developer, Arduino Programmer "></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/vaishnav.c.10" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/tintuhere/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/_vai_sh_nav__2005/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/channel/UCTN2TrT7Se1mrXZSvyxXWVA" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
         <a href="https://github.com/VAISHNAVGIT" target="_blank" class="github"><i class="bx bxl-github"></i></a>
       </div>
