--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <p>I'm <span class="typed" data-typed-items="Web Developer, Arduino Programmer "></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/vaishnav.c.10" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/_vai_sh_nav__2005/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.youtube.com/channel/UCTN2TrT7Se1mrXZSvyxXWVA" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.instagram.com/_va.ish.nav_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.youtube.com/channel/UCiqLfMmBtQbeIkVbJEHcEGQ" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
         <a href="https://github.com/VAISHNAVGIT" target="_blank" class="github"><i class="bx bxl-github"></i></a>
       </div>
     </div>
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Vaishnav C. I am a student. Now completed SSLC from Tharakan Heigher Seconday,Angadippum. And admitted at IHRD Perinthalmanna for Physical Science.</p>
+          <p>My name is Vaishnav C. I am a student. Now completed +2 from Technical Higher Secondary School,Perinthalmanna.</p>
         </div>
 
         <div class="row">
@@ -103,8 +103,8 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>17</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>SSLC</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>18</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>+2</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>csheeja1980@gmail.com</span></li>
                 </ul>
               </div>
@@ -343,6 +343,13 @@
               <h5>9th and 10th Standard</h5>
               <p><em>High school studies.</em></p>
               <p>This was a turning point in my life. I joined Little Kites club (IT club to enhance the computer skills of students). At that time even I don't know, how to create a folder in computer. Teachers teached me scratch programming. That was my first entry to the programming world. Now, after 2 years I learned a lot. I can't forget that sweety moments.</p>
+            </div>
+          </div>
+           <div class="resume-item">
+              <h4>Technical Higher Secondary School, Preinthalmanna</h4>
+              <h5>+1 and +2 </h5>
+              <p><em>Higher Secondary</em></p>
+              <p>This was a turning point in my life. I joined R-STEP (conducted by IEEE) that was a wonderful course. I got so many friends. I will never forget these 2 years in my entire life</p>
             </div>
           </div>
           <!-- <div class="col-lg-6">
@@ -768,7 +775,7 @@
       <p>Thank You for visiting my website.</p>
       <div class="social-links">
         <a href="https://www.facebook.com/vaishnav.c.10" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/_vai_sh_nav__2005/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.instagram.com/_va.ish.nav_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Vaishnav c</span></strong>. All Rights Reserved
