--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Vaishnav C. I am a student. Now completed +2 from Technical Higher Secondary School,Perinthalmanna.</p>
+          <p>My name is Vaishnav. <br>I am a 1st year Engineering student at Jyothi Engineering College, Cheruthuruthy</p>
         </div>
 
         <div class="row">
@@ -96,8 +96,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19 March</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Mobile:</strong> <span>Not Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>DOB:</strong> <span>19th March 2005</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Mobile:</strong> <span>+91 6282939647</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Perinthalmanna, Malappuram </span></li>
                 </ul>
               </div>
@@ -105,7 +105,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>18</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>+2</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>csheeja1980@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vaishnav679322@gmail.com</span></li>
                 </ul>
               </div>
             </div>
@@ -184,21 +184,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">95%</i></span>
+              <span class="skill">After Effect <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">95%</i></span>
+              <span class="skill">editting <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Arduino Programmer <i class="val">80%</i></span>
+              <span class="skill">Arduino Programming <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -281,16 +281,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill"> MUSIC <i class="val">20%</i></span>
+              <span class="skill"> MUSIC <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">App Development<i class="val">25%</i></span>
+              <span class="skill">editting<i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -307,7 +307,7 @@
 
         <div class="section-title">
           <h2>My Lifeline</h2>
-          <p> I am living in a town named Perinthalmanna in malappuram district . I completed my studies from schools in this town. <br></p>
+          <p> I am living in a town named Perinthalmanna in malappuram district. I completed my studies from schools in this town. <br></p>
           <h5>Here's a short lifeline of my studies.</h5>
         </div>
 
@@ -330,28 +330,34 @@
               <h4>BHARATHIYA VIDHYA BHAVAN,THIRUNAVAYA</h4>
               <h5>1st-5th Standard</h5>
               <p><em>Lower primary studies.</em></p>
-              <p>Here I started my education. I can't forget the teachers and life here. A credit of all of my growth returns to the teachers here.</p>
+              <p>   Here I started my education. I can't forget the teachers and life here. A credit of all of my growth returns to the teachers here.</p>
             </div>
             <div class="resume-item">
               <h4>ST.JOSEPH'S ENGLISH MEDIUM SCHOOL,PUTHANANGADI</h4>
               <h5>6th-8th Standard</h5>
               <p><em>Upper primary studies.</em></p>
-              <p>I went there after my lower primary studies. I developed my English language from there. This school gave me an another level experience.</p>
+              <p>   I went there after my lower primary studies. I developed my English language from there. This school gave me an another level experience.</p>
             </div>
             <div class="resume-item">
               <h4>THARAKAN HEIGHER SECONDARY SCHOOL,ANGADIPPURAM</h4>
               <h5>9th and 10th Standard</h5>
               <p><em>High school studies.</em></p>
-              <p>This was a turning point in my life. I joined Little Kites club (IT club to enhance the computer skills of students). At that time even I don't know, how to create a folder in computer. Teachers teached me scratch programming. That was my first entry to the programming world. Now, after 2 years I learned a lot. I can't forget that sweety moments.</p>
+              <p>   This was a turning point in my life. I joined Little Kites club (IT club to enhance the computer skills of students). At that time even I don't know, how to create a folder in computer. Teachers teached me scratch programming. That was my first entry to the programming world. Now, after 2 years I learned a lot. I can't forget that sweety moments. <br></p>
             </div>
-          </div>
-           <div class="resume-item">
+            <div class="resume-item">
               <h4>Technical Higher Secondary School, Preinthalmanna</h4>
               <h5>+1 and +2 </h5>
               <p><em>Higher Secondary</em></p>
-              <p>This was a turning point in my life. I joined R-STEP (conducted by IEEE) that was a wonderful course. I got so many friends. I will never forget these 2 years in my entire life</p>
+              <p>   This was a turning point in my life. I joined R-STEP (conducted by IEEE) that was a wonderful course. <br> I got so many friends.  I will never forget those 2 years in my entire life</p>
+            </div>
+            <div class="resume-item">
+              <h4>Jyothi Engineering College, Cheruthuruthy</h4>
+              <h5>Electronics & Communication Engineering </h5>
+              <p><em>Engineering</em></p>
+              <p>   1st year Loading .....</p>
             </div>
           </div>
+          
           <!-- <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
@@ -714,19 +720,19 @@
               <div class="address">
                 <a href="https://www.google.co.in/maps/@10.9818485,76.2192988,116m/data=!3m1!1e3?hl=en" target="_blank"><i class="bi bi-geo-alt"></i></a>
                 <h4>Location:</h4>
-                <p>muttungal,perinthalmanna(po)</p>
+                <p>Perinthalmanna, Malappuram(dt), Kerala-679322</p>
               </div>
 
               <div class="email">
-                <a href="mailto:csheeja1980@gmail.com"><i class="bi bi-envelope"></i></a>
+                <a href="mailto:vaishnav679322@gmail.com"><i class="bi bi-envelope"></i></a>
                 <h4>Email:</h4>
-                <p>csheeja1980@gmail.com</p>
+                <p>vaishnav679322@gmail.com</p>
               </div>
 
               <div class="phone">
-                <a href="notavailable.html"><i class="bi bi-phone"></i></a>
+                <a href="tel:+YOURNUMBERHERE"><i class="bi bi-phone"></i></a>
                 <h4>Call:</h4>
-                <p>Not Available</p>
+                <p>+91 6282939647</p>
               </div>
 
             </div>
@@ -735,7 +741,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form id="submit-form" action="mailto:csheeja1980@gmail.com" method="POST">
+            <form id="submit-form" action="mailto:vaishnav679322@gmail.com" method="POST">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -771,21 +777,21 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Vaishnav c</h3>
+      <h3>Vaishnav C</h3>
       <p>Thank You for visiting my website.</p>
       <div class="social-links">
         <a href="https://www.facebook.com/vaishnav.c.10" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/_va.ish.nav_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Vaishnav c</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Vaishnav C</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: [license-url] -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://vaishnavgit.github.io/.com/">Vaishnav c</a>
+        Designed by <a href="https://vaishnavgit.github.io/.com/">Vaishnav C</a>
       </div>
     </div>
   </footer><!-- End Footer -->
