--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>18</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>+2</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Education:</strong> <span>Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vaishnav679322@gmail.com</span></li>
                 </ul>
               </div>
