--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
               </div>
 
               <div class="phone">
-                <a href="tel:+YOURNUMBERHERE"><i class="bi bi-phone"></i></a>
+                <a href="tel:+91 6282939647"><i class="bi bi-phone"></i></a>
                 <h4>Call:</h4>
                 <p>6282939647</p>
               </div>
