--- a/index.html
+++ b/index.html
@@ -730,9 +730,9 @@
               </div>
 
               <div class="phone">
-                <a href="tel:+91 6282939647"><i class="bi bi-phone"></i></a>
+                <a href="tel:+916282939647"><i class="bi bi-phone"></i></a>
                 <h4>Call:</h4>
-                <p>6282939647</p>
+                <p>+91 6282939647</p>
               </div>
 
             </div>
