--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>My name is Vaishnav. <br>I am a 1st year Engineering student at Jyothi Engineering College, Cheruthuruthy</p>
+          <p>My name is Vaishnav. <br>I am a 1st year Engineering student at Jyothi Engineering College, Cheruthuruthy.</p>
         </div>
 
         <div class="row">
@@ -307,7 +307,7 @@
 
         <div class="section-title">
           <h2>My Lifeline</h2>
-          <p> I am living in a town named Perinthalmanna in malappuram district. I completed my studies from schools in this town. <br></p>
+          <p> I am living in a town named Perinthalmanna in Malappuram district. I completed my studies from schools in my hometown. <br></p>
           <h5>Here's a short lifeline of my studies.</h5>
         </div>
 
@@ -333,13 +333,13 @@
               <p>   Here I started my education. I can't forget the teachers and life here. A credit of all of my growth returns to the teachers here.</p>
             </div>
             <div class="resume-item">
-              <h4>ST.JOSEPH'S ENGLISH MEDIUM SCHOOL,PUTHANANGADI</h4>
+              <h4>ST.JOSEPH'S ENGLISH MEDIUM SCHOOL, PUTHANANGADI</h4>
               <h5>6th-8th Standard</h5>
               <p><em>Upper primary studies.</em></p>
-              <p>   I went there after my lower primary studies. I developed my English language from there. This school gave me an another level experience.</p>
+              <p>   I went there after my lower primary studies. I developed my English language from there. This school gave me another level of experience.</p>
             </div>
             <div class="resume-item">
-              <h4>THARAKAN HEIGHER SECONDARY SCHOOL,ANGADIPPURAM</h4>
+              <h4>THARAKAN HIGHER SECONDARY SCHOOL,ANGADIPPURAM</h4>
               <h5>9th and 10th Standard</h5>
               <p><em>High school studies.</em></p>
               <p>   This was a turning point in my life. I joined Little Kites club (IT club to enhance the computer skills of students). At that time even I don't know, how to create a folder in computer. Teachers teached me scratch programming. That was my first entry to the programming world. Now, after 2 years I learned a lot. I can't forget that sweety moments. <br></p>
@@ -720,7 +720,7 @@
               <div class="address">
                 <a href="https://www.google.co.in/maps/@10.9818485,76.2192988,116m/data=!3m1!1e3?hl=en" target="_blank"><i class="bi bi-geo-alt"></i></a>
                 <h4>Location:</h4>
-                <p>Perinthalmanna, Malappuram(dt), Kerala-679322</p>
+                <p>Perinthalmanna, Malappuram, Kerala-679322</p>
               </div>
 
               <div class="email">
