--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
               <h4>Jyothi Engineering College, Cheruthuruthy</h4>
               <h5>Electronics & Communication Engineering </h5>
               <p><em>Engineering</em></p>
-              <p>   1st year Loading .....</p>
+              <p>   2nd year Loading .....</p>
             </div>
           </div>
         </div>
@@ -524,7 +524,7 @@
             success:function (response){
                 alert("Form submitted successfully")
                 window.location.reload()
-                //window.location.href="https://google.com"
+             
             },
             error:function (err){
                 alert("Something Error, Please press the mail icon")
