--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets\img\VAISHNAV.JPG" style="border-radius: 60px;" class="img-fluid" alt="">
+            <img src="assets\img\61QPLVPgSOL._SL1500_.jpg" style="border-radius: 60px;" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3><br><br><br> BIODATA</h3>
