--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a href="https://www.facebook.com/vaishnav.c.10" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/_va.ish.nav_/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://www.youtube.com/channel/UCiqLfMmBtQbeIkVbJEHcEGQ" target="_blank" class="youtube"><i class="bx bxl-youtube"></i></a>
-        <a href="https://github.com/VAISHNAVGIT" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://github.com/VAISHNAVGIT" target="_blank" class="github"><i class="bx bxl-github"></i></a><br><br>
         <a href="https://buymeacoffee.com/v9010546q" target="_blank" class="github"><button type="button" class="btn btn-primary"style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .5rem;">Buy me a coffee</button><i class="bx bxl-coffee"></i></a>
       </div>
     </div>
